# 05EPPY_A01

./: MANIFEST.in  Pipfile  README.md  pyproject.toml  requirements.txt
src/cookie_clicker/: __main__.py
src/cookie_clicker/cookie_game/: __init__.py  cookie_game.py
src/cookie_clicker/data/: cookies.json
src/cookie_clicker/products/: __init__.py  products.py
